--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,19 @@ version: '3.8'
 
 services:
   web:
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
     build: .
-    command: uvicorn main:app --reload --port 8000 --host 0.0.0.0
+    # command to enable gunicorn:
+    command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 4
+    # command: uvicorn main:app --reload --port 8000 --host 0.0.0.0
+    deploy:
+      resources:
+        limits:
+          cpus: '1.50'
+          memory: 3g
     env_file:
       - .env
     ports:
@@ -14,6 +25,7 @@ services:
       # Sync our host with docker for hot reloading
     depends_on:
       - db
+
 
   db:
     image: postgres
