--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,9 @@ services:
         hard: 65536
     build: .
     # command to enable gunicorn:
-    command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 4
+    # command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 4
+    command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 2 
+
     # command: uvicorn main:app --reload --port 8000 --host 0.0.0.0
     deploy:
       resources:
