Increased pool; postgres optimizations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,5 +36,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: local
       POSTGRES_DB: EngLab3
+    command: postgres -c listen_addresses='*' -c 'max_connections=1100' -c shared_buffers=512MB -c effective_cache_size=2GB -c work_mem=64MB -c maintenance_work_mem=512MB -c checkpoint_completion_target=0.9 -c wal_buffers=16MB -c max_wal_size=2GB
     ports:
       - "5432:5432"
