--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,7 @@ services:
         soft: 65536
         hard: 65536
     build: .
-    # command to enable gunicorn:
-    # command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 4
     command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --threads 2 
-
-    # command: uvicorn main:app --reload --port 8000 --host 0.0.0.0
     deploy:
       resources:
         limits:
@@ -27,6 +23,7 @@ services:
       # Sync our host with docker for hot reloading
     depends_on:
       - db
+      - redis
 
 
   db:
@@ -39,3 +36,14 @@ services:
     command: postgres -c listen_addresses='*' -c 'max_connections=1100' -c shared_buffers=512MB -c effective_cache_size=2GB -c work_mem=64MB -c maintenance_work_mem=512MB -c checkpoint_completion_target=0.9 -c wal_buffers=16MB -c max_wal_size=2GB
     ports:
       - "5432:5432"
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"   
+    volumes:
+      - redisdata:/data
+
+
+volumes:
+  redisdata:
